--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,12 @@ before_install:
   #- make
   #- sudo make install
   - realpath --help
+  - wget https://github.com/jgm/pandoc/releases/download/1.19.2.1/pandoc-1.19.2.1-1-amd64.deb
+  - sudo dpkg -i pandoc-1.19.2.1-1-amd64.deb
 install:
   - npm install
+before_script:
+  - fish ./convert-docx.fish
 script:
   - npm run build
 deploy:
