--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
   "devDependencies": {
     "bulma": "^0.4.2",
     "node-sass": "^4.5.3",
-    "react-site": "0.7.0"
+    "react-site": "0.7.1"
   },
   "scripts": {
     "build": "node-sass main.scss > style.css && react-site build"
+  },
+  "react-site": {
+    "build-ignore": [
+      "admin/*",
+      "media/*"
+    ],
+    "static": [
+      "CNAME",
+      "admin/*"
+    ]
   }
 }
