--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "bulma": "^0.4.2",
     "extract-summary": "^1.0.0",
     "node-sass": "^4.5.3",
-    "react-site": "^0.7.2"
+    "react-site": "1.0.2"
   },
   "scripts": {
-    "build": "node-sass main.scss > style.css && react-site build"
+    "build": "node-sass main.scss > style.css && react-site generate.js --helmet=helmet.js --body=body.js"
   }
 }
